--- a/Frontend/src/assets/styles/cmps/_AsideMenu.scss
+++ b/Frontend/src/assets/styles/cmps/_AsideMenu.scss
@@ -1,189 +1,220 @@
 .aside-menu {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    background: white;
-    max-width: 275px;
-    height: 100vh;
-    gap: 1em;
-    z-index: 15;
-    padding: 1em;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background: white;
+  max-width: 275px;
+  height: 100vh;
+  gap: 1em;
+  z-index: 15;
+  padding: 1em;
 
-    .top-icons {
-        justify-content: space-between;
-
-        .user-info {
-            gap: 0.55em;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 1fr;
-
-            img {
-                grid-column: 1;
-                grid-row: 1 / -1;
-            }
-
-            span {
-                &:first-child {
-                    grid-column: 2;
-                    grid-row: 1;
-                }
-
-                &:last-child {
-                    grid-column: 2;
-                    grid-row: 2;
-                }
-            }
+  .top-icons {
+    justify-content: space-between;
+    .chat-icon {
+      position: relative;
+      i {
+        position: relative;
+        z-index: 5;
+        svg {
+          fill: $clrSecondary8;
+          width: 36px;
+          height: 36px;
         }
+      }
+      &.notification::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 2px;
+        width: 32px;
+        height: 32px;
+        background-color: red;
+        opacity: 0.5;
+        border-radius: 50%;
+        animation: grow 0.7s infinite alternate;
+        z-index: 1;
 
-        img {
-            width: 60px;
-            height: 60px;
-            object-fit: cover;
-            border-radius: 50%;
+        @keyframes grow {
+          to {
+            scale: 1.5 1.5;
+          }
         }
+      }
     }
 
-    a,
-    button {
-        color: $clrSecondary6;
-        transition: color 0.3s, background-color 0.3s, border 0.3s;
+    .user-info {
+      gap: 0.55em;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
 
-        &:hover {
-            color: $bgColor3 !important;
-        }
-    }
+      img {
+        grid-column: 1;
+        grid-row: 1 / -1;
+      }
 
-    .join {
-        padding: 9px 16px;
-        border-radius: 5px;
-        font-size: 14px;
-        font-family: 'macan-bold';
-        background: $bgColor3;
-        border: 1px solid $bgColor3;
-        color: $clrPrimary1;
-
-        &:hover {
-            background-color: $bgColor5;
-            border: 1px solid $bgColor5;
-            color: $clrPrimary1 !important;
-        }
-    }
-
-    .login {
-        background: none;
-        font-size: 16px;
-        padding: 0;
-        font-family: 'macan-regular';
-        text-align: left;
-    }
-
-    .logout {
-        display: block;
-        padding: 12px 0;
-        color: $clrSecondary5;
-        background: none;
-        font-family: "macan-regular";
-        font-size: 16px;
-        font-weight: 400;
-        width: 100%;
-        border-top: 1.5px solid $clrSecondary2;
-        text-align: left;
-    }
-
-    .MuiPaper-root {
-        box-shadow: none;
-
-        #panel1bh-header {
-            padding: 0;
+      span {
+        &:first-child {
+          grid-column: 2;
+          grid-row: 1;
         }
 
-        .MuiCollapse-root {
-            .MuiCollapse-wrapper {
-                .MuiCollapse-wrapperInner {
-                    #panel1bh-content {
-                        max-height: 280px;
-                        overflow-y: scroll;
+        &:last-child {
+          grid-column: 2;
+          grid-row: 2;
+        }
+      }
+    }
 
-                        .MuiAccordionDetails-root {
-                            padding: 0;
+    img {
+      width: 60px;
+      height: 60px;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+  }
 
-                            .buyer-orders-dropdown {
-                                .buyer-orders {
-                                    display: flex;
-                                    flex-direction: column;
+  a,
+  button {
+    color: $clrSecondary6;
+    transition: color 0.3s, background-color 0.3s, border 0.3s;
 
-                                    .buyer-order {
-                                        margin-bottom: 1em;
-                                        padding-bottom: 1em;
-                                        grid-template-columns: 1fr 1fr;
-                                        grid-template-rows: 1fr auto auto;
-                                        gap: 16px;
-                                        font-weight: 100;
-                                        border-bottom: 1px solid $clrSecondary2;
+    &:hover {
+      color: $bgColor3 !important;
+    }
+  }
 
-                                        &:last-child {
-                                            border: none;
-                                        }
+  .join {
+    padding: 9px 16px;
+    border-radius: 5px;
+    font-size: 14px;
+    font-family: 'macan-bold';
+    background: $bgColor3;
+    border: 1px solid $bgColor3;
+    color: $clrPrimary1;
 
-                                        &:not(:last-child):hover {
-                                            border-bottom: 1px solid $bgColor3;
-                                        }
+    &:hover {
+      background-color: $bgColor5;
+      border: 1px solid $bgColor5;
+      color: $clrPrimary1 !important;
+    }
+  }
 
-                                        .order-image {
-                                            grid-column: 1 / -1;
-                                            grid-row: 1;
+  .login {
+    background: none;
+    font-size: 16px;
+    padding: 0;
+    font-family: 'macan-regular';
+    text-align: left;
+  }
 
-                                            img {
-                                                margin-block-start: 0.375em;
-                                                object-fit: cover;
-                                                border: 1px solid $clrSecondary4;
-                                                border-radius: 10px;
-                                                max-height: 150px;
-                                            }
-                                        }
+  .logout {
+    display: block;
+    padding: 12px 0;
+    color: $clrSecondary5;
+    background: none;
+    font-family: 'macan-regular';
+    font-size: 16px;
+    font-weight: 400;
+    width: 100%;
+    border-top: 1.5px solid $clrSecondary2;
+    text-align: left;
+  }
 
-                                        .order-title {
-                                            grid-column: 1 / -1;
-                                            grid-row: 2;
-                                        }
+  .MuiPaper-root {
+    box-shadow: none;
 
-                                        .seller-name {
-                                            grid-column: 1;
-                                            grid-row: -1;
-                                            font-size: 14px;
-                                        }
+    #panel1bh-header {
+      padding: 0;
+    }
 
-                                        .order-status {
-                                            grid-column: 2;
-                                            grid-row: -1;
-                                            text-align: center;
-                                            text-transform: uppercase;
+    .MuiCollapse-root {
+      .MuiCollapse-wrapper {
+        .MuiCollapse-wrapperInner {
+          #panel1bh-content {
+            max-height: 280px;
+            overflow-y: scroll;
 
-                                            &.pending {
-                                                color: #FFC107;
-                                            }
+            .MuiAccordionDetails-root {
+              padding: 0;
 
-                                            &.denied {
-                                                color: #FF5E5E;
-                                            }
+              .buyer-orders-dropdown {
+                .buyer-orders {
+                  display: flex;
+                  flex-direction: column;
 
-                                            &.accepted {
-                                                color: #19a463;
-                                            }
+                  .buyer-order {
+                    margin-bottom: 1em;
+                    padding-bottom: 1em;
+                    grid-template-columns: 1fr 1fr;
+                    grid-template-rows: 1fr auto auto;
+                    gap: 16px;
+                    font-weight: 100;
+                    border-bottom: 1px solid $clrSecondary2;
 
-                                            &.completed {
-                                                color: #29A2C6;
-                                            }
-                                        }
-                                    }
-                                }
-                            }
-                        }
+                    &:last-child {
+                      border: none;
                     }
+
+                    &:not(:last-child):hover {
+                      border-bottom: 1px solid $bgColor3;
+                    }
+
+                    .order-image {
+                      grid-column: 1 / -1;
+                      grid-row: 1;
+
+                      img {
+                        margin-block-start: 0.375em;
+                        object-fit: cover;
+                        border: 1px solid $clrSecondary4;
+                        border-radius: 10px;
+                        max-height: 150px;
+                      }
+                    }
+
+                    .order-title {
+                      grid-column: 1 / -1;
+                      grid-row: 2;
+                    }
+
+                    .seller-name {
+                      grid-column: 1;
+                      grid-row: -1;
+                      font-size: 14px;
+                    }
+
+                    .order-status {
+                      grid-column: 2;
+                      grid-row: -1;
+                      text-align: center;
+                      text-transform: uppercase;
+
+                      &.pending {
+                        color: #ffc107;
+                      }
+
+                      &.denied {
+                        color: #ff5e5e;
+                      }
+
+                      &.accepted {
+                        color: #19a463;
+                      }
+
+                      &.completed {
+                        color: #29a2c6;
+                      }
+                    }
+                  }
                 }
+              }
             }
+          }
         }
+      }
     }
+  }
 }
