--- a/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
+++ b/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
@@ -89,7 +89,7 @@
       padding: 16px;
 
       &.checked {
-        border-bottom: 3px solid #222325;
+        border-bottom: 3px solid $clrPrimary2;
         color: $clrPrimary2;
       }
     }
