--- a/Frontend/src/assets/styles/cmps/_UserGigs.scss
+++ b/Frontend/src/assets/styles/cmps/_UserGigs.scss
@@ -27,7 +27,7 @@
       align-items: center;
       justify-content: space-between;
       padding: 0.625em 0.75em;
-      border-block-start: 1px solid #efeff0;
+      border-block-start: 1px solid $clrSecondary14;
 
       .gig-btns {
         display: flex;
