--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -34,7 +34,7 @@ $clr1: #19a463;
 $clr2: #78cdd2;
 $clr3: #29bd49;  //not used
 $clr4: #d83b3b;  //not used
-$clr5: #0077ff;  //not used
+$clr5: #0070ba;  
 $clr6: #ffff54;  //not used
 $clr7: #ffbe5b;
 $clr8: #ff8a8a;
