--- a/Frontend/src/assets/styles/cmps/_UserChat.scss
+++ b/Frontend/src/assets/styles/cmps/_UserChat.scss
@@ -1,7 +1,7 @@
 .mini-message-bar {
   bottom: 2em;
   display: inline-block;
-  margin-left: 2em;
+  // margin-left: 2em;
   position: sticky;
   z-index: 10;
   width: fit-content;
@@ -86,15 +86,15 @@
   position: sticky;
   bottom: 2em;
   display: inline-block;
-  margin-left: 2em;
+  // margin-left: 2em;
   z-index: 10;
   width: fit-content;
   
   .chat-box {
     color: $clrPrimary2;
-    font-family: macan;
+    font-family: macan-regular;
     display: grid;
-    position: fixed;
+    position: sticky;
     overflow: auto;
     background: rgba(34, 35, 37, 0.5);
     z-index: 30;
@@ -123,13 +123,14 @@
     width: 100%;
   }
   @media only screen and (min-width: 601px) {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: sticky;
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
 
-    width: 544px;
-    max-width: 450px;
+    width: 450px;
+
+    // max-width: 450px;
     border-radius: 4px;
     border: 1px solid $clrSecondary10;
     z-index: 20;
@@ -137,7 +138,7 @@
 
   .chat-box-container {
     background-color: $clrPrimary1;
-    font-family: macan;
+    // font-family: macan;
     padding: 0 1.5em;
     height: 100%;
     // min-height: 0;
@@ -243,11 +244,12 @@
           flex-direction: column;
           justify-content: flex-end;
           margin-block-end: 1em;
+          max-height: 315px;
           
           .message {
             display: flex;
             flex-direction: column;
-            font-family: macan;
+            // font-family: macan;
             width: fit-content;
             word-wrap: break-word;
             max-width: 80%;
@@ -334,7 +336,7 @@
 
               background: none;
               border-color: currentColor;
-              font-family: macan;
+              // font-family: macan;
               font-size: em(14px);
               padding: 10px 16px;
               
@@ -348,7 +350,7 @@
           }
           
           .message-footer {
-            font-family: macan;
+            // font-family: macan;
             display: flex;
             justify-content: end;
           }
@@ -357,7 +359,7 @@
       
       .message-options {
         background-color: $clrPrimary1;
-        font-family: macan;
+        // font-family: macan-regular;
         display: flex;
         align-items: center;
         justify-content: space-between;
