pro level now looks pro

--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -46,6 +46,7 @@ $clr13: #2890af;
 $clr14: #ffdf80;
 $clr15: #ca9800;
 $clr16: #f96363;
+$clr17: #2e25ad;
 
 // Breakpoints
 $mobile-breakpoint: 460px;  //not used
