--- a/Frontend/src/assets/styles/cmps/_UserPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_UserPreview.scss
@@ -26,6 +26,10 @@
     font-weight: 600;
     border-radius: 4px;
     margin-inline-start: auto;
+    &.pro{
+      color: $clrPrimary1;
+      background-color: $clr17;
+    }
   }
 
   .username {
