--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -591,7 +591,7 @@
 }
 
 .user-msg {
-  @media(max-width: 600px) {
+  @media (max-width: 600px) {
     left: 0 !important;
 
     .message-area {
@@ -605,10 +605,82 @@
     }
   }
 
-  @media(min-width: 601px) {
+  @media (min-width: 601px) {
     .message-area {
       .msg-status {
         padding: 1.1em;
+      }
+    }
+  }
+}
+
+.chat-box-wrapper {
+  .chat-box {
+    @media (max-width: 600px) {
+      width: 100vw;
+      height: 100vh;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      overflow: hidden;
+      max-height: none;
+      position: fixed;
+    }
+
+    @media (min-width: 601px) {
+      position: sticky;
+      width: 450px;
+      border-radius: 4px;
+      border: 1px solid $clrSecondary10;
+      height: 765px;
+    }
+
+    .chat-box-container {
+      .chat-container {
+        .message-form {
+          .message-container {
+            @media (max-width: 600px) {
+              max-height: 550px;
+
+              .message {
+                .message-text {
+                  font-size: 1em;
+
+                  &::after {
+                    bottom: 29.5px;
+                  }
+                }
+
+                &.other .message-text {
+                  &::after {
+                    bottom: 37.5px;
+                  }
+                }
+              }
+            }
+
+            @media (min-width: 601px) {
+              max-height: 365px;
+
+              .message {
+                .message-text {
+                  font-size: 0.8em;
+
+                  &::after {
+                    bottom: 20px;
+                  }
+                }
+
+                &.other .message-text {
+                  &::after {
+                    bottom: 28px;
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -619,7 +691,7 @@
     padding: 1em 2em;
   }
 
-  @media(max-width:800px) {
+  @media (max-width:800px) {
     flex-direction: column;
     gap: 1em;
 
